[gd_scene load_steps=43 format=3 uid="uid://bd1d6ouk8s0pn"]

[ext_resource type="Script" path="res://menus/robot_masters_menu.gd" id="1_41uxb"]
[ext_resource type="Texture2D" uid="uid://csec55bccsqmf" path="res://assets/miscellaneous/robot_masters_menu.png" id="2_lg7tr"]
[ext_resource type="Texture2D" uid="uid://nosd10qivc2m" path="res://assets/miscellaneous/robot_masters_menu_black_background.png" id="3_2o0fi"]
[ext_resource type="Texture2D" uid="uid://c3p7ulj1pv60n" path="res://assets/miscellaneous/robot_masters_menu_select_cursor.png" id="4_5cku1"]
[ext_resource type="Texture2D" uid="uid://bvi8vxgae7qrr" path="res://assets/miscellaneous/select_spritesheet.png" id="5_4vv0t"]
[ext_resource type="FontFile" uid="uid://sg5d2u3x7n5d" path="res://assets/fonts/megaman_2.ttf" id="6_g5vd2"]
[ext_resource type="AudioStream" uid="uid://bsernc0jmxpmk" path="res://assets/music/Megaman_F_Revival_-_Stage_Select.mp3" id="7_hw3nd"]
[ext_resource type="AudioStream" uid="uid://8ekyoqi7wgvx" path="res://assets/sounds/change_weapon_robot_master.ogg" id="8_ui418"]
[ext_resource type="AudioStream" uid="uid://cs2hbndrxu528" path="res://assets/sounds/weapon_and_menu_select.ogg" id="9_6wmsj"]
[ext_resource type="Texture2D" uid="uid://d0ttw8is1rt5h" path="res://assets/miscellaneous/megaman_f_level_select_megaman_eyes_spritesheet.png" id="10_ddsld"]
[ext_resource type="Texture2D" uid="uid://csgyb022vhtay" path="res://assets/miscellaneous/mmf_robot_menu_template_done1.png" id="11_l8fji"]
[ext_resource type="Texture2D" uid="uid://ep03nkg1js37" path="res://assets/miscellaneous/acid_man_mmf_attempt.png" id="12_5hwc2"]
[ext_resource type="Texture2D" uid="uid://b2kgxp0l5nb8v" path="res://assets/miscellaneous/blackhole_man_mmf_attempt.png" id="13_ppord"]
[ext_resource type="Texture2D" uid="uid://ckeu381uxkr4g" path="res://assets/miscellaneous/fusion man mmf try.png" id="14_bu2v2"]
[ext_resource type="Texture2D" uid="uid://cjthqdl6g68f" path="res://assets/miscellaneous/mmf_menu_select_animated_spritesheet.png" id="15_c4k3d"]
[ext_resource type="Texture2D" uid="uid://c66uowtolrk1w" path="res://assets/miscellaneous/fault-man-megaman-f-portrait-redraw.png" id="15_gas6b"]
[ext_resource type="Texture2D" uid="uid://c2dayp1410oui" path="res://assets/miscellaneous/robot-master-menu-parts/mmf_robot_menu_part1-export.png" id="16_2jwxc"]
[ext_resource type="Texture2D" uid="uid://dadyapw68mkby" path="res://assets/miscellaneous/smoke-man-mmf-portrait.png" id="16_b4bh1"]
[ext_resource type="Texture2D" uid="uid://c4trb7flhnn33" path="res://assets/miscellaneous/robot-master-menu-parts/mmf_robot_menu_part2-export.png" id="17_638ia"]
[ext_resource type="Texture2D" uid="uid://cgoiogthhs1p3" path="res://assets/miscellaneous/magpulse_man_Memorable Man.png" id="17_g530u"]
[ext_resource type="Texture2D" uid="uid://cakqp00kkv1nr" path="res://assets/miscellaneous/robot-master-menu-parts/mmf_robot_menu_part3-export.png" id="18_3t8rj"]
[ext_resource type="Texture2D" uid="uid://6fhk1m2qyrqh" path="res://assets/miscellaneous/sax_design_chaos_man_portrait_main.png" id="18_wv8tp"]
[ext_resource type="Theme" uid="uid://dc5mof4oa3hlk" path="res://main_theme_for_hud_stuff.tres" id="23_0l6xa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6suvm"]
atlas = ExtResource("5_4vv0t")
region = Rect2(214, 0, 214, 223)

[sub_resource type="SpriteFrames" id="SpriteFrames_63jj4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6suvm")
}, {
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"select",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_q6c8i"]
atlas = ExtResource("10_ddsld")
region = Rect2(0, 165, 165, 165)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4r75"]
atlas = ExtResource("10_ddsld")
region = Rect2(165, 165, 165, 165)

[sub_resource type="AtlasTexture" id="AtlasTexture_hho26"]
atlas = ExtResource("10_ddsld")
region = Rect2(330, 165, 165, 165)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrkwa"]
atlas = ExtResource("10_ddsld")
region = Rect2(330, 0, 165, 165)

[sub_resource type="AtlasTexture" id="AtlasTexture_e758b"]
atlas = ExtResource("10_ddsld")
region = Rect2(0, 0, 165, 165)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhar4"]
atlas = ExtResource("10_ddsld")
region = Rect2(165, 0, 165, 165)

[sub_resource type="AtlasTexture" id="AtlasTexture_avy06"]
atlas = ExtResource("10_ddsld")
region = Rect2(0, 330, 165, 165)

[sub_resource type="AtlasTexture" id="AtlasTexture_iua2t"]
atlas = ExtResource("10_ddsld")
region = Rect2(165, 330, 165, 165)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvfni"]
atlas = ExtResource("10_ddsld")
region = Rect2(330, 330, 165, 165)

[sub_resource type="SpriteFrames" id="SpriteFrames_tyo7m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6c8i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4r75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hho26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrkwa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e758b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhar4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_avy06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iua2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvfni")
}],
"loop": false,
"name": &"select_eyes_frames",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_nuf0x"]
atlas = ExtResource("15_c4k3d")
region = Rect2(0, 0, 49, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b22uq"]
atlas = ExtResource("15_c4k3d")
region = Rect2(49, 0, 49, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_ha1rn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nuf0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b22uq")
}],
"loop": true,
"name": &"select",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iqij6"]
bg_color = Color(0.235294, 0.737255, 0.988235, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8brdk"]
bg_color = Color(0.235294, 0.737255, 0.988235, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 3.0
expand_margin_top = 3.0
expand_margin_right = 3.0
expand_margin_bottom = 3.0

[sub_resource type="Animation" id="Animation_36gkd"]
resource_name = "menuAnimation1"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("press_start:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v63fi"]
_data = {
"menuAnimation1": SubResource("Animation_36gkd")
}

[node name="robot_masters_menu" type="Node2D"]
position = Vector2(2, 0)
script = ExtResource("1_41uxb")

[node name="intro" type="Label" parent="."]
z_index = 2
offset_left = 525.0
offset_top = 104.0
offset_right = 693.0
offset_bottom = 127.0
rotation = -0.356047
theme_override_colors/font_color = Color(0.243137, 0.980392, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("6_g5vd2")
text = "INTRO STAGE"

[node name="intro2" type="Label" parent="."]
z_index = 2
offset_left = 258.0
offset_top = 324.0
offset_right = 426.0
offset_bottom = 347.0
rotation = -0.356047
theme_override_colors/font_color = Color(0.243137, 0.980392, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("6_g5vd2")
text = "DEBUG STAGE"

[node name="intro3" type="Label" parent="."]
z_index = 2
offset_left = 7.99998
offset_top = 128.0
offset_right = 236.0
offset_bottom = 151.0
rotation = -0.356047
theme_override_colors/font_color = Color(0.243137, 0.980392, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("6_g5vd2")
text = "Work in progress"

[node name="RobotMastersMenu" type="Sprite2D" parent="."]
visible = false
z_index = 2
position = Vector2(383.9, 344)
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_lg7tr")

[node name="RobotMastersMenuBlackBackground" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(-3, -3)
scale = Vector2(0.626221, 0.727364)
texture = ExtResource("3_2o0fi")
centered = false

[node name="RobotMastersMenuSelectCursor" type="Sprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(-385.1, 32)
scale = Vector2(0.7, 0.7)
texture = ExtResource("4_5cku1")

[node name="cursor" type="AnimatedSprite2D" parent="." groups=["disappear"]]
z_index = -1
position = Vector2(-390.1, 226)
scale = Vector2(0.7, 0.7)
sprite_frames = SubResource("SpriteFrames_63jj4")
animation = &"select"
frame_progress = 0.724054

[node name="press_start" type="Label" parent="."]
z_index = 2
offset_left = 304.9
offset_top = 53.0
offset_right = 466.9
offset_bottom = 76.0
theme_override_fonts/font = ExtResource("6_g5vd2")
text = "PRESS START"

[node name="all_cursors_pointers" type="Node2D" parent="."]
position = Vector2(-187.1, 50)

[node name="acid_man" type="Marker2D" parent="all_cursors_pointers"]
position = Vector2(339.1, 108.809)
scale = Vector2(3, 3)

[node name="fusion_man" type="Marker2D" parent="all_cursors_pointers"]
position = Vector2(572.1, 114)
scale = Vector2(0.7, 0.7)

[node name="blackhole_man" type="Marker2D" parent="all_cursors_pointers"]
position = Vector2(803.1, 114)
scale = Vector2(0.7, 0.7)

[node name="devil_man" type="Marker2D" parent="all_cursors_pointers"]
position = Vector2(336.1, 308)
scale = Vector2(0.7, 0.7)

[node name="megaman" type="Marker2D" parent="all_cursors_pointers"]
position = Vector2(571.1, 312)
scale = Vector2(0.7, 0.7)

[node name="fault_man" type="Marker2D" parent="all_cursors_pointers"]
position = Vector2(807.1, 311)
scale = Vector2(0.7, 0.7)

[node name="smoke_man" type="Marker2D" parent="all_cursors_pointers"]
position = Vector2(337.1, 512)
scale = Vector2(0.7, 0.7)

[node name="magpulse_man" type="Marker2D" parent="all_cursors_pointers"]
position = Vector2(569.1, 510)
scale = Vector2(0.7, 0.7)

[node name="chaos_man" type="Marker2D" parent="all_cursors_pointers"]
position = Vector2(803.1, 513)
scale = Vector2(0.7, 0.7)

[node name="all_robot_masters_names" type="Node2D" parent="."]
position = Vector2(-187.1, 50)

[node name="acid_man" type="Label" parent="all_robot_masters_names"]
z_index = 2
offset_left = 276.1
offset_top = 192.0
offset_right = 388.1
offset_bottom = 215.0
theme_override_fonts/font = ExtResource("6_g5vd2")
text = "ACID MAN"

[node name="fusion_man" type="Label" parent="all_robot_masters_names"]
z_index = 2
offset_left = 502.0
offset_top = 193.0
offset_right = 646.0
offset_bottom = 216.0
theme_override_fonts/font = ExtResource("6_g5vd2")
text = "FUSION MAN"

[node name="blackhole_man" type="Label" parent="all_robot_masters_names"]
z_index = 2
offset_left = 716.1
offset_top = 193.0
offset_right = 912.1
offset_bottom = 216.0
theme_override_fonts/font = ExtResource("6_g5vd2")
text = "BLACKHOLE MAN"

[node name="devil_man" type="Label" parent="all_robot_masters_names"]
z_index = 2
offset_left = 268.1
offset_top = 400.0
offset_right = 398.1
offset_bottom = 423.0
theme_override_fonts/font = ExtResource("6_g5vd2")
text = "DEVIL MAN"

[node name="fault_man" type="Label" parent="all_robot_masters_names"]
z_index = 2
offset_left = 740.1
offset_top = 398.0
offset_right = 872.1
offset_bottom = 421.0
theme_override_fonts/font = ExtResource("6_g5vd2")
text = "FAULT MAN"

[node name="smoke_man" type="Label" parent="all_robot_masters_names"]
z_index = 2
offset_left = 271.1
offset_top = 598.0
offset_right = 403.1
offset_bottom = 621.0
theme_override_fonts/font = ExtResource("6_g5vd2")
text = "SMOKE MAN"

[node name="magpulse_man" type="Label" parent="all_robot_masters_names"]
z_index = 2
offset_left = 491.1
offset_top = 598.0
offset_right = 673.1
offset_bottom = 621.0
theme_override_fonts/font = ExtResource("6_g5vd2")
text = "MAGPULSE MAN"

[node name="chaos_man" type="Label" parent="all_robot_masters_names"]
z_index = 2
offset_left = 741.1
offset_top = 598.0
offset_right = 875.1
offset_bottom = 621.0
theme_override_fonts/font = ExtResource("6_g5vd2")
text = "CHAOS MAN"

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0

[node name="sound_effects_music" type="Node2D" parent="."]
position = Vector2(-187.1, 50)

[node name="menu_music" type="AudioStreamPlayer2D" parent="sound_effects_music"]
stream = ExtResource("7_hw3nd")
volume_db = 5.0

[node name="robot_master_select" type="AudioStreamPlayer2D" parent="sound_effects_music"]
stream = ExtResource("8_ui418")

[node name="menu_confirm" type="AudioStreamPlayer2D" parent="sound_effects_music"]
stream = ExtResource("9_6wmsj")

[node name="megaman_select" type="AnimatedSprite2D" parent="."]
z_index = -1
position = Vector2(382, 360)
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_tyo7m")
animation = &"select_eyes_frames"
frame = 8
frame_progress = 1.0

[node name="robot_master_menu_new" type="Sprite2D" parent="."]
visible = false
scale = Vector2(3, 3)
texture = ExtResource("11_l8fji")
centered = false

[node name="all_robot_masters_portraits" type="Node2D" parent="."]
z_index = -1

[node name="acid_man" type="Sprite2D" parent="all_robot_masters_portraits"]
position = Vector2(149, 159)
scale = Vector2(3, 3)
texture = ExtResource("12_5hwc2")

[node name="blackhole_man" type="Sprite2D" parent="all_robot_masters_portraits"]
position = Vector2(618, 159)
scale = Vector2(3, 3)
texture = ExtResource("13_ppord")

[node name="fusion_man" type="Sprite2D" parent="all_robot_masters_portraits"]
position = Vector2(384, 159)
scale = Vector2(3, 3)
texture = ExtResource("14_bu2v2")

[node name="fault_man" type="Sprite2D" parent="all_robot_masters_portraits"]
position = Vector2(618, 360)
scale = Vector2(3, 3)
texture = ExtResource("15_gas6b")

[node name="smoke_man" type="Sprite2D" parent="all_robot_masters_portraits"]
position = Vector2(149, 561)
scale = Vector2(3, 3)
texture = ExtResource("16_b4bh1")

[node name="magpulse_man" type="Sprite2D" parent="all_robot_masters_portraits"]
position = Vector2(383, 561)
scale = Vector2(3, 3)
texture = ExtResource("17_g530u")

[node name="chaos_man" type="Sprite2D" parent="all_robot_masters_portraits"]
position = Vector2(617, 561)
scale = Vector2(3, 3)
texture = ExtResource("18_wv8tp")

[node name="all_select_sprites" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="all_select_sprites"]
position = Vector2(385, 159)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_ha1rn")
animation = &"select"
offset = Vector2(1, 0)

[node name="MmfRobotMenuPart1-export" type="Sprite2D" parent="."]
z_index = -1
scale = Vector2(3, 3)
texture = ExtResource("16_2jwxc")
centered = false

[node name="MmfRobotMenuPart2-export" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(270, 0)
scale = Vector2(3, 3)
texture = ExtResource("17_638ia")
centered = false

[node name="MmfRobotMenuPart3-export" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(507, 0)
scale = Vector2(3, 3)
texture = ExtResource("18_3t8rj")
centered = false

[node name="menu_buttons" type="Node2D" parent="."]

[node name="shop" type="Button" parent="menu_buttons"]
offset_left = 553.0
offset_top = 681.0
offset_right = 671.0
offset_bottom = 712.0
theme = ExtResource("23_0l6xa")
theme_override_styles/normal = SubResource("StyleBoxFlat_iqij6")
text = "SHOP"

[node name="main_menu" type="Button" parent="menu_buttons"]
offset_left = 288.0
offset_top = 681.0
offset_right = 416.0
offset_bottom = 702.0
scale = Vector2(1.5, 1.5)
theme = ExtResource("23_0l6xa")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_8brdk")
text = "main menu"

[node name="timers" type="Node2D" parent="."]

[node name="switch_menu" type="Timer" parent="timers"]
one_shot = true

[node name="Button" type="Button" parent="."]
offset_left = 89.0
offset_top = 681.0
offset_right = 225.0
offset_bottom = 705.0
theme = ExtResource("23_0l6xa")
text = "SAVE FILE"

[node name="MenuAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v63fi")
}

[connection signal="finished" from="sound_effects_music/menu_music" to="." method="_on_menu_music_finished"]
[connection signal="pressed" from="menu_buttons/shop" to="." method="_on_shop_pressed"]
[connection signal="pressed" from="menu_buttons/shop" to="." method="switch_menus"]
[connection signal="pressed" from="menu_buttons/main_menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="menu_buttons/main_menu" to="." method="switch_menus"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
